[gd_scene load_steps=26 format=1]

[ext_resource path="res://Plataforma psd 64 copy.tex" type="Texture" id=1]
[ext_resource path="res://banana.gd" type="Script" id=2]
[ext_resource path="res://banana.png" type="Texture" id=3]
[ext_resource path="res://moko.gd" type="Script" id=4]
[ext_resource path="res://spritestriptest.tex" type="Texture" id=5]
[ext_resource path="res://American Captain.fnt" type="BitmapFont" id=6]
[ext_resource path="res://labelPergunta.gd" type="Script" id=7]
[ext_resource path="res://labelPontos.gd" type="Script" id=8]
[ext_resource path="res://bgTeste.tex" type="Texture" id=9]
[ext_resource path="res://resposta.gd" type="Script" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 75.8605, -2.12965, 93.6003, -3.98364, 92.7858, 18.008, 63.2091, 45.0356 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 63.2091, 45.0356, -95.4582, 46.7058, -97.1284, 3.2811, -83.962, -2.35461, 75.8605, -2.12965 )

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( 74.9004, -3.39966, 90.181, -15.6125, 91.6023, 18.3127, 57.9945, 38.0317 )

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( -82.6602, -3.39276, 74.9004, -3.39966, 57.9945, 38.0317, -98.5492, 37.5441, -97.1284, 3.2811 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 209.674, -7.02963, 214.634, 21.8353, 63.2091, 45.0356, 75.9534, -2.21875 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -75.416, -5.06982, 75.9534, -2.21875, 63.2091, 45.0356, -95.4582, 46.7058, -97.1284, 3.2811 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 366.507, 56.3591, 349.889, 49.895, 355.267, 44.1592, 367.097, 45.9517 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 371.04, 69.6118, 355.625, 65.3099, 354.191, 59.2156, 358.852, 57.7817, 366.507, 56.3591, 382.87, 67.8193 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 403.011, 63.9117, 382.87, 67.8193, 366.507, 56.3591, 367.097, 45.9517, 382.87, 43.8008, 406.169, 47.5477 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 406.169, 47.5477, 382.87, 43.8008, 394.7, 35.5556, 408.686, 36.2188 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 405.096, 23.3671, 408.686, 36.2188, 394.7, 35.5556, 395.059, 20.1407, 401.87, 17.9898 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 5.38626, -1.49545, 6.99192, 11.8502, -10.6897, 12.0164, -8.26593, -2.90495, 0.574711, -6.5345 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 5.38626, -1.49545, 0.574711, -6.5345, 1.49425, -12.5837, 6.55172, -14.1968, 9.77011, -9.35745, 9.54023, -2.90498 )

[sub_resource type="Animation" id=14]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="RectangleShape2D" id=15]

custom_solver_bias = 0.0
extents = Vector2( 13.1715, 10 )

[node name="Node2D" type="Node2D"]

transform/pos = Vector2( 158.805, 470.297 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 286.406, -222.977 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Plataforma 1" type="Sprite" parent="KinematicBody2D"]

transform/pos = Vector2( 0.173126, 16.123 )
transform/scale = Vector2( 5.82265, 4.50812 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]

build_mode = 0
polygon = Vector2Array( -97.1284, 3.2811, -83.962, -2.35461, 75.8605, -2.12965, 93.6003, -3.98364, 92.7858, 18.008, 63.2091, 45.0356, -95.4582, 46.7058 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="KinematicBody2D3" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 1118.93, -237.331 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Plataforma 1" type="Sprite" parent="KinematicBody2D3"]

transform/pos = Vector2( 0.173126, 16.123 )
transform/scale = Vector2( 5.82265, 4.50812 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D3"]

build_mode = 0
polygon = Vector2Array( -97.1284, 3.2811, -83.962, -2.35461, 75.8605, -2.12965, 93.6003, -3.98364, 92.7858, 18.008, 63.2091, 45.0356, -95.4582, 46.7058 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="KinematicBody2D1" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 658.394, -137.852 )
input/pickable = false
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 0.631548, 0, 0, 1, -1.74662, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 17 )
shapes/1/transform = Matrix32( 0.631548, 0, 0, 1, -1.74662, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Plataforma 2" type="Sprite" parent="KinematicBody2D1"]

transform/pos = Vector2( -1.57328, 11.4354 )
transform/scale = Vector2( 5.85719, 4.50812 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D1"]

transform/pos = Vector2( -1.74662, 0 )
transform/scale = Vector2( 0.631548, 1 )
build_mode = 0
polygon = Vector2Array( -97.1284, 3.2811, -82.6602, -3.39276, 74.9004, -3.39966, 90.181, -15.6125, 91.6023, 18.3127, 57.9945, 38.0317, -98.5492, 37.5441 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 371.108, 18.157 )
transform/scale = Vector2( 5.6631, 0.944568 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_lock_": true
}

[node name="Plataforma psd 64 copy1" type="Sprite" parent="KinematicBody2D2"]

transform/pos = Vector2( 68.7907, 10.7554 )
transform/scale = Vector2( 9.09118, 4.50812 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D2"]

build_mode = 0
polygon = Vector2Array( -97.1284, 3.2811, -75.416, -5.06982, 75.9534, -2.21875, 209.674, -7.02963, 214.634, 21.8353, 63.2091, 45.0356, -95.4582, 46.7058 )
shape_range = Vector2( 0, 1 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="KinematicBodyBanana" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 270.635, -215.249 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 8 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 9 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 10 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 11 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="SpriteBanana" type="Sprite" parent="KinematicBodyBanana"]

transform/pos = Vector2( 379.1, 44.3242 )
transform/scale = Vector2( 0.108721, 0.0978623 )
texture = ExtResource( 3 )

[node name="CollisionBanana" type="CollisionPolygon2D" parent="KinematicBodyBanana"]

build_mode = 0
polygon = Vector2Array( 355.267, 44.1592, 367.097, 45.9517, 382.87, 43.8008, 394.7, 35.5556, 395.059, 20.1407, 401.87, 17.9898, 405.096, 23.3671, 408.686, 36.2188, 406.169, 47.5477, 403.011, 63.9117, 382.87, 67.8193, 371.04, 69.6118, 355.625, 65.3099, 354.191, 59.2156, 358.852, 57.7817, 366.507, 56.3591, 349.889, 49.895 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="RigidBodyMoko" type="RigidBody2D" parent="."]

transform/pos = Vector2( 218.373, 9.25308 )
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 6.06718, 0, 0, 3.45852, -23.6286, -45.9056 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 13 )
shapes/1/transform = Matrix32( 6.06718, 0, 0, 3.45852, -23.6286, -45.9056 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 14
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )
player_speed = 400
acceleration = 10
extra_gravity = 550
jumpforce = 420
vidas = 3
pontos = 0

[node name="Moko" type="Sprite" parent="RigidBodyMoko"]

transform/pos = Vector2( -23.6777, -58.2773 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="RigidBodyMoko/Moko"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/andar = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Camera2D" type="Camera2D" parent="RigidBodyMoko"]

transform/pos = Vector2( 136.342, -180.781 )
transform/scale = Vector2( 4.22729, 3.17867 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
__meta__ = {
"_edit_lock_": true
}

[node name="RayCast2D" type="RayCast2D" parent="RigidBodyMoko"]

transform/pos = Vector2( -40.013, -24.2508 )
transform/scale = Vector2( 1, 1.21429 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayCast2D1" type="RayCast2D" parent="RigidBodyMoko"]

transform/pos = Vector2( -40.013, -24.2508 )
transform/scale = Vector2( 1, 1.21429 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBodyMoko"]

transform/pos = Vector2( -23.6286, -45.9056 )
transform/scale = Vector2( 6.06718, 3.45852 )
build_mode = 0
polygon = Vector2Array( 0.574711, -6.5345, -8.26593, -2.90495, -10.6897, 12.0164, 6.99192, 11.8502, 5.38626, -1.49545, 9.54023, -2.90498, 9.77011, -9.35745, 6.55172, -14.1968, 1.49425, -12.5837 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="Pergunta" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="LabelPergunta" type="Label" parent="Pergunta"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 446.0
margin/top = 502.0
margin/right = 582.0
margin/bottom = 616.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0664063, 0.0578461, 0.0578461, 1 )
text = "2x2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 7 )
respAtual = 0
indiceAtual = 0
perguntas = [  ]

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="LabelPontos" type="Label" parent="HUD"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 30.0
margin/right = 752.0
margin/bottom = 147.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.334091, 0.553879, 0.589844, 1 )
text = "Pontos: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1200, 600 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -3.0
margin/right = 1200.0
margin/bottom = 597.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Resposta" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 1121.25, -268.57 )
input/pickable = false
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 2.11709, 0, 0, 3.17093, -4.37609, -2.45401 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 10 )

[node name="Label" type="Label" parent="Resposta"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -22.0
margin/top = -49.0
margin/right = 46.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta"]

transform/pos = Vector2( -4.37609, -2.45401 )
transform/scale = Vector2( 2.11709, 3.17093 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Resposta1" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 276.442, -253.765 )
input/pickable = false
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 2.23417, 0, 0, 3.24211, 9.51932, -1.5287 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 10 )

[node name="Label" type="Label" parent="Resposta1"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -22.0
margin/top = -49.0
margin/right = 46.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "18"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta1"]

transform/pos = Vector2( 9.51932, -1.5287 )
transform/scale = Vector2( 2.23417, 3.24211 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 0


